<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tittle2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/txtTitlle2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop15"
            android:layout_marginBottom="@dimen/marginTop15"
            android:layout_columnSpan="2"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/barriga"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/barriga"/>
        <CheckBox
            android:id="@+id/muslos"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/muslos"/>
        <CheckBox
            android:id="@+id/brazo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/brazo"/>
        <CheckBox
            android:id="@+id/gluteos"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="50dp"
            android:text="@string/gluteos"/>
    </GridLayout>
    <TextView
        android:id="@+id/tittle3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tittle3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/marginTop15"
        android:layout_marginBottom="@dimen/marginTop15"
        android:layout_gravity="center"/>

    <Spinner
        android:id="@+id/objetivoDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3.0"
        android:stepSize="1.0"/>




</LinearLayout>