<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF"/>

    <LinearLayout
        android:id="@+id/login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/editextUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editextUsuario"/>
        <EditText
            android:id="@+id/editextContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editextContra"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ff00"
            android:layout_gravity="center"
            android:text="@string/btnAceptar"
            android:layout_marginTop="@dimen/marginTop15"/>

        <TextView
            android:id="@+id/textBienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textSize="25dp"
            android:background="#C0A0F6"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/marginTop15"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnPag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Siguiente página"
        android:backgroundTint="#673AB7"
        android:layout_marginRight="15dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="onClick"/>

</LinearLayout>